--- a/results.tex
+++ b/results.tex
@@ -137,11 +137,11 @@ Although the number of Defect Debt have no impact in the number of feature addit
 \vspace{1mm}
 \noindent\textbf{Approach:} First we selected  of metrics that we believed that would be good indicators of Defect Debt. In our data base we prepared the following metrics per release: number of corrective commits, number of feature addition commits, number of merge commits, number of non function commits, number of perfective commits, number of preventative commits, number of non classified commits, total number of churn, total number of developers, difference of developers from previous release, project complexity, lines of code, number of comments in the bug report, total number of bug fixes and bug reported close to the next release.
 
-Second, we run the analysis in Understand, and build our own script to extracted data using the API. We extract lines of code and complexity of each release using Understand. We process 15 tags of Chrome in this tool creating one database for each tag. The oldest tag that we were able to retrieve from Chrome in this experiment was the tag 10.0.648.127. We cloned the git repository using the repository provided in GitHub \footnote{https://chromium.googlesource.com/chromium/src}. To create our model we just consider tags that we can get all the selected metrics, which means tags ranging to version 10.0.648.127 to 25.0.1364.97.
+Second, we run the analysis in Understand, and build our own script to extract data using the API. We extract lines of code and complexity of each release using Understand. We process 15 tags of Chrome in this tool creating one database for each tag. The oldest tag that we were able to retrieve from Chrome in this experiment was the tag 10.0.648.127. We cloned the git repository using the repository provided in Chromium Blog \footnote{https://chromium.googlesource.com/chromium/src}. To create our model we just consider tags that we can get all the selected metrics, which means tags ranging to version 10.0.648.127 to 25.0.1364.97.
 
 Third, we import the data into RStudio. RStudio is a tool to the statical analysis using the programming language R. For each one of the metrics that we collect we checked their data distribution. We do that using skewness and kurtosis both are commands from the library `e1071' that can be imported into RStudio. Skewness is used to verify if the data is skewed to the left or to the right in the x axis. The value returned from this function should be close to zero, which means that your data is normally distributed. Kurtosis follows the same principle but is used to check the data distribution in the y axis. After running these commands we apply the log function to the following factors in order to normalize the data: number non functional commits, difference of developers from previous release and number of comments in the bug report. 
 
-Fourth, we analyze the correlation of our metrics,  and test the result of the correlation. Using RStudio we run the correlation command using `spearman' method. Then we test the correlation significance. Instead of using `cor.test' that cal test only one correlation at a time we opted to use `psych' package. The correlation test function of this package produces correlations and significance levels for matrices of Pearson, Spearman, or Kendall correlations. We can use it using the command `corr.test(dataset, use=``complete'')'. We discuss the correlation results further. 
+Fourth, we analyze the correlation of our metrics,  and test the result of the correlation. Using RStudio we run the correlation command using `spearman' method. Then we test the correlation significance. Instead of using `cor.test' that can test only one correlation at a time we opted to use `psych' package. The correlation test function of this package produces correlations and significance levels for matrices of Pearson, Spearman, or Kendall correlations. We can use it using the command `corr.test(dataset, use=``complete'')'. We discuss the correlation results further. 
 
 Fifth, we build the model and run the vif function to calculate the variance inflation factor of our model. We imported `car' package in RStudio to be able to run the vif function.
 After the installation we run vif(model) command. With the returned value we can see with two or more of our factors are actually measuring the same thing. If is that the case, we can choose between which factors to keep and simplify our model.  
