--- a/conclusion.tex
+++ b/conclusion.tex
@@ -8,6 +8,6 @@ We found that the defect debt does not impact negatively the addition of new fea
 
 Although the correlations between the measures are not high their directions gives us insights to add more meaningful metrics.
 
-One possible way to improve the Defect Debt model is to calculate the effective size for the regression. Other possibility is to reformulate the problem. Changing the granularity of the analysis to the level file instead of the release level. 
+One possible way to improve the Defect Debt model is to calculate the effective size for the regression. Other possibility is to reformulate our research question changing the granularity of the analysis to the file level instead of the release level.
 
 In a future work we plan to include in our analyze the severity of the issues. In our current analysis we do not take this factor in consideration. This will lead us further in the understanding of Defect Debt characterization, and prevent us of relying just on the assumption that only what is import get fixed. As a matter of fact, more research in this subject can provide empirical evidence for proving or rejecting this assumption.
