--- a/results.tex
+++ b/results.tex
@@ -9,11 +9,11 @@ We conduct our study in a large scale open source software system to distinguish
 \vspace{1mm}
 \noindent\textbf{Approach:} To identify Defect Debt we first, mine the project issuer tracker to extract the bug reports. Then, we link the bug report to its respective software release using the reported date. 
 
-Second, we extract the commits from the source code repository. In some projects like Google Chrome, it is a common practice to add the bug id in the commit message. Based on this knowledge, we use the commit messages to link the commits with bug reports. Regular expressions are the most common way to identify bug id in the commit message. This technique provide us the exact date that the bug was fixed, which is more precise than reeling on the closing date from the bug report. The trade-off of this technique is that is not always possible to find the bug id for each one of the bug reports, or the bug id in the message can be wrong as it is a manual input. Other than that, it is possible to find multiple commits that corresponds to the same bug id, scenario that need further investigation when linking. 
+Second, we extract the commits from the source code repository. In some projects like Google Chrome, it is a common practice to add the bug id in the commit message. Based on this knowledge, we use the commit messages to link the commits with bug reports. Regular expressions are the most common way to identify bug id in the commit message. This technique provide us the exact date that the bug was fixed, which is more precise than reeling on the closing date from the bug report. The trade-off of this technique is that is not always possible to find the bug id for each one of the bug reports, or the bug id in the message can be wrong as it is a manual input. \peter{Couldn't you just take the latest commit date, as the bug may have needed multiple fixes} Other than that, it is possible to find multiple commits that corresponds to the same bug id, scenario that need further investigation when linking. 
 
 Third, we link the commit to its respective release using commit date. For each defect in our system we have the date that they were reported and the date they were fixed. 
 
-Fourth, we take all reported defects for each one of the releases. Then, we group it based on the release they were fixed. In total we did this process for 26 Chrome releases. We plot the data to visualize the distribution of the defects and draw conclusions. 
+Fourth, we take all reported defects for each one of the releases. Then, we group it based on the release they were fixed. In total we did this process for 26 Chrome releases. We plot the data to visualize the distribution of the defects and draw conclusions. \peter{Chrome has a three channel overlapping release process. How did you deal with this?}
 
 \vspace{1mm}
 \noindent\textbf{Result:} Analyzing the graphs shown in figure \ref{fig:defect_release_1} we observe that most defects are fixed during the release that they were reported or in the immediately next one. A smaller quantity of defects reported in the current release will remain in the system for a long time, but eventually get fixed. The observed pattern holds for each analyzed version. 
@@ -30,16 +30,16 @@ Fourth, we take all reported defects for each one of the releases. Then, we grou
 	\includegraphics[width=0.49\textwidth]{figures/r6}
 \end{figure}
 
-In some cases, like shown in figure \ref{fig:defect_release_6} we can observe a reopened bug. (i.e., the same defect has a fix reported in one previous release and in the current release as well). Just based in this argument, we can not say that we were able to identify all reopened bugs in the system. There are different factors that can impact this scenario (e.g., it is possible that a reopened bug has a new bug id in the issuer tracker, and in that case our approach would not identify it as a reopened bug). More investigation is needed in order to explain this phenomena in a satisfactory way. 
+In some cases, like shown in figure \ref{fig:defect_release_6} we can observe a reopened bug. (i.e., the same defect has a fix reported in one previous release and in the current release as well). Just based in this argument, we can not say that we were able to identify all reopened bugs in the system. There are different factors that can impact this scenario (e.g., it is possible that a reopened bug has a new bug id in the issuer tracker, and in that case our approach would not identify it as a reopened bug). \peter{Why are we interested in re-opened bugs, isn't that a different study?} More investigation is needed in order to explain this phenomena in a satisfactory way. \peter{Are re-opened bugs defect debt or are they complex bugs that keep coming back, you need to be clear in your definition}
 
-Accordingly with our findings, we say that it is possible to distinguish regular Bugs and Defect Debt based on their fix behavior. Bugs are more critical defects and are fixed near to its reported date (i.e., in the same or in the immediately next release), and Defect Debts are defects that lingers in the system for several releases but eventually are fixed. We believe that the fix behavior of the 
+Accordingly with our findings, we say that it is possible to distinguish regular Bugs and Defect Debt based on their fix behavior. Bugs are more critical defects and are fixed near to its reported date (i.e., in the same or in the immediately next release), and Defect Debts are defects that lingers in the system for several releases but eventually are fixed. We believe that the fix behavior of the \peter{the???}
 
 There is not hard proof in our study that the reason that Bugs are fixed first than Defect Debt because they are more critical, but based on our experience we argue that tasks in a project are assigned to developers following a priority order. Even considering a open source environment where non-core developers (e.g., an anonymous contributor), could be fixing bugs just because they are easy to fix, previous work by Mockus et al. \cite{mockus2010ICSM} has shown that most of the development activity is done by the core developers of the system.
 
 Based on our findings we quantify the average of Bugs and Defect Debt in the analyzed releases. Considering the reported defects on Chrome has an average of 69.55\% Bugs and 30.44\% of Defect Debt.
 
 \vspace{1mm}
-\conclusionbox{Bugs are more critical defects, and get fixed in the reported or in the next release. Whereas Defect Debt may linger in the system for a long time, but eventually it get fixed. The average percentage of Bugs is of 69.55\%, and Defect Debt is of 30.44\%}
+\conclusionbox{Bugs are more critical defects, and get fixed in the reported or in the next release. Whereas Defect Debt may linger in the system for a long time, but eventually it get fixed. The average percentage of Bugs is of 69.55\%, and Defect Debt is of 30.44\% \peter{Nice, since you use number of releases in your definition of defect debt, we can't  really study time to fix each, without first acknowledging this definition}}
 \vspace{1mm}
 
 \vspace{3mm}
@@ -62,7 +62,7 @@ Third, we label all the commits and group them by release. We use a tool that cl
 Fourth, we compare the distribution of Defect Debt with the distribution of Feature Addition commits. To see the distribution of Defect Debt we group the total number of Defect Debt per release and plot a graph with the result. Then we group the total number of commits labeled as `Feature Addition' per release and plot a graph with the result.
 
 \vspace{1mm}
-\noindent\textbf{Result:} We show the number of open bugs in figure \ref{fig:number_of_bugs_releases}. We found that the number of bugs keep increasing as the project gets older. Towards the end of the graph we see a major decrease in the number of open bugs in the system, but this happened as a reflexion of our data. As we get near the end of our data set, we see the effects of the lack of information about future releases. 
+\noindent\textbf{Result:} We show the number of open bugs in figure \ref{fig:number_of_bugs_releases}. We found that the number of bugs keep increasing as the project gets older. Towards the end of the graph we see a major decrease in the number of open bugs in the system, but this happened as a reflexion of our data. As we get near the end of our data set, we see the effects of the lack of information about future releases. \peter{You should exclude the last year or so from your data set}
 
 \begin{figure}[thb!]
 	\caption{Number of open bugs per release}
@@ -70,9 +70,9 @@ Fourth, we compare the distribution of Defect Debt with the distribution of Feat
 	\includegraphics[width=0.49\textwidth]{figures/number_of_bugs_releases}
 \end{figure}
   
-Based on this graph we found that during all releases there was a considerable number of open bugs in the system, and the developers of the project prioritize some fixes other than others. This behavior could mean that the bugs that were not fixed because they were not important. In order to analyze that we extract the distribution of the Defect Debt in figure \ref{fig:technical_debt}. We found that the behavior of Defect Debt is much more volatile. We see growth in peaks, but they are fixed in future versions. That means that they are important enough to be fixed, they just delay the fix until a moment that it is more fit to fix it.
+Based on this graph we found that during all releases there was a considerable number of open bugs in the system, and the developers of the project prioritize some fixes other than others. This behavior could mean that the bugs that were not fixed because they were not important. In order to analyze that we extract the distribution of the Defect Debt in figure \ref{fig:technical_debt}. We found that the behavior of Defect Debt is much more volatile. We see growth in peaks, but they are fixed in future versions. That means that they are important enough to be fixed, they just delay the fix until a moment that it is more fit to fix it. \peter{Is this all bugs, or bugs that have been acknowledged by devs. There are a lot of user reported bugs that are uninteresting and will never be dealt with. Might be best to only look at bugs that were ultimately fixed}
 
-Analyzing the number of `Feature Addition' commits we found that in the first releases has the highest amount of `Feature Addition' commits as shown in figure \ref{fig:feature_addition_releases} . This confirms what we expected to see in the beginning of the development of a product. Surprisingly though is that the number of Defect Debt does not seems to cause a negative impact in the addition of new features. Analyzing both graphs we see that as the number of feature addition increases we have a increase in the number of Defect Debt as well. This lead us to the conclusion that new features brings more Defect Debt to the system and that after some releases they are corrected. We show detailed information about feature addition distribution and Defect Debt distribution in table \ref{tab:feature_addition_badsmell_overview}.
+Analyzing the number of `Feature Addition' commits we found that in the first releases has the highest amount of `Feature Addition' commits as shown in figure \ref{fig:feature_addition_releases} . This confirms what we expected to see in the beginning of the development of a product. Surprisingly though is that the number of Defect Debt does not seems to cause a negative impact in the addition of new features. Analyzing both graphs we see that as the number of feature addition increases we have a increase in the number of Defect Debt as well. This lead us to the conclusion that new features brings more Defect Debt to the system and that after some releases they are corrected. We show detailed information about feature addition distribution and Defect Debt distribution in table \ref{tab:feature_addition_badsmell_overview}. \peter{Interesting, I wonder if we could look at individual developers debts and see if it affects their feature addition. It may be that these differences are washed out by looking at the entire project}
 
 Although the number of Defect Debt have no impact in the number of feature addition, we can not say that Defect does not cause any other kind of impact. In this study we did not take in consideration the number of developers needed to keep adding features or the amount of time necessary to do it. we understand that more analysis is necessary to understand what is the impact that Defect Debt has in the quality of a software project.
 
@@ -139,7 +139,7 @@ Although the number of Defect Debt have no impact in the number of feature addit
 
 Second, we run the analysis in Understand, and build our own script to extract data using the API. We extract lines of code and complexity of each release using Understand. We process 15 tags of Chrome in this tool creating one database for each tag. The oldest tag that we were able to retrieve from Chrome in this experiment was the tag 10.0.648.127. We cloned the git repository using the repository provided in Chromium Blog \footnote{https://chromium.googlesource.com/chromium/src}. To create our model we just consider tags that we can get all the selected metrics, which means tags ranging to version 10.0.648.127 to 25.0.1364.97.
 
-Third, we import the data into RStudio. RStudio is a tool to the statical analysis using the programming language R. For each one of the metrics that we collect we checked their data distribution. We do that using skewness and kurtosis both are commands from the library `e1071' that can be imported into RStudio. Skewness is used to verify if the data is skewed to the left or to the right in the x axis. The value returned from this function should be close to zero, which means that your data is normally distributed. Kurtosis follows the same principle but is used to check the data distribution in the y axis. After running these commands we apply the log function to the following factors in order to normalize the data: number non functional commits, difference of developers from previous release and number of comments in the bug report. 
+Third, we import the data into RStudio. RStudio is a tool to the statical analysis using the programming language R. For each one of the metrics that we collect we checked their data distribution. We do that using skewness and kurtosis both are commands from the library `e1071' that can be imported into RStudio. Skewness is used to verify if the data is skewed to the left or to the right in the x axis. The value returned from this function should be close to zero, which means that your data is normally distributed. Kurtosis follows the same principle but is used to check the data distribution in the y axis. After running these commands we apply the log function to the following factors in order to normalize the data: number non functional commits, difference of developers from previous release and number of comments in the bug report. \peter{too much detail}
 
 Fourth, we analyze the correlation of our metrics,  and test the result of the correlation. Using RStudio we run the correlation command using `spearman' method. Then we test the correlation significance. Instead of using `cor.test' that can test only one correlation at a time we opted to use `psych' package. The correlation test function of this package produces correlations and significance levels for matrices of Pearson, Spearman, or Kendall correlations. We can use it using the command `corr.test(dataset, use=``complete'')'. We discuss the correlation results further. 
 
@@ -149,7 +149,8 @@ After the installation we run vif(model) command. With the returned value we can
 \vspace{1mm}
 \noindent\textbf{Result:} We create a summary table in our database containing all the selected metrics. All the data in the table are shown in table \ref{tab:metrics_details_1} and in table \ref{tab:metrics_details_2} in the Appendix section. We were able to collect all the desired metrics to a limited number of releases. This happened because in our dataset we have two different scenarios. For the linked bugs and commits we have data from the first release until release 25, and using the Chromium repository to analyze the source code we have available release 10 and forth. We opted to reduce our analyzed dataset to the intersection part of both scenarios,  giving us complete information of 15 releases of Chrome.
 
-We verify the collected data in RStudio to understand how it is distributed. First we run skewness for each one of our metrics, based on the result returned we applied the log function to the following metrics:  log(non\_functional\_commit +1), log(dev\_left + 1) and  log(bug\_report\_reply + 1). Then we repeat the same process to verify the values of y axis using kurtosis, but no action was necessary. 
+\peter{which direction was the data skewed in?}
+We verify the collected data in RStudio to understand how it is distributed. First we run skewness for each one of our metrics, based on the result returned we applied the log function to the following metrics:  log(non\_functional\_commit +1), log(dev\_left + 1) and  log(bug\_report\_reply + 1). Then we repeat the same process to verify the values of y axis using kurtosis, but no action was necessary. \peter{why was no action necessary?}
 
 We show the correlation results in table \ref{tab:correlation_defect_debt}.  Analyzing the results we can see that the only metric strongly correlated with Defect Debt is the number of comments in a bug reported. We believe that this express one of the found characteristics of Defect Debt that is defects that are important but get a long time to be fixed. During the period of time that fixes are postponed to these defects comments in the bug reported starts to pile up. 
 
@@ -157,7 +158,7 @@ Other than that, it is interesting to analyze the negative correlations that we 
 
 \begin{table}[!hbt]
       \begin{center}
-            \caption{Correlation for Defect Debt}
+            \caption{Correlation for Defect  \peter{What about correlations with eachother?}}
             \label{tab:correlation_defect_debt}
             \begin{tabular}{l| c}
             \toprule
@@ -180,7 +181,7 @@ Other than that, it is interesting to analyze the negative correlations that we 
       \end{center}
 \end{table}
 
-Based on the correlations that we got, we tried to create a model. Although we experimented with many different combinations between our factors at this moment we were not able to get a solid model to Defect Debt. Our factors in the model does not have statistical significance as we show in table \ref{tab:model_p_values}  as the p value is too hight for every factor that we collect. Interesting to notice that our model has a hight R-squared value of 0.6932, but this hight value alone does not mean anything as our factors are not statistically relevant. One possible explanation for this result is the low amount of data that we are analyzing as we group all of our metrics in the release level. To improve this result we plan to use the same metrics in the file level in a future work. This will provide us with the amount of data that we think that is necessary to run this experiment successfully. 
+Based on the correlations that we got, we tried to create a model. Although we experimented with many different combinations between our factors at this moment we were not able to get a solid model to Defect Debt. Our factors in the model does not have statistical significance as we show in table \ref{tab:model_p_values}  as the p value is too hight for every factor that we collect. Interesting to notice that our model has a hight R-squared value of 0.6932, but this hight value alone does not mean anything as our factors are not statistically relevant. One possible explanation for this result is the low amount of data that we are analyzing as we group all of our metrics in the release level. To improve this result we plan to use the same metrics in the file level in a future work. This will provide us with the amount of data that we think that is necessary to run this experiment successfully. \peter{hmm, too bad. The problem with file based measures is that you often have too much noise, whereas here you have not enough data}
 
 \begin{table}[!hbt]
       \begin{center}
