--- a/threats_to_validity.tex
+++ b/threats_to_validity.tex
@@ -1,1 +1,2 @@
 \noindent \textbf{External validity} consider the generalization of our findings. All of our findings were derived from one open source project. To minimize external validity, we chose a large open source project. That said, our results may not generalize to other open source or commercial projects.
+\peter{hmm, I guess you did discuss construct validity throughout, but it would have been nice to summarize or at least state that here}
