--- a/introduction.tex
+++ b/introduction.tex
@@ -1,17 +1,18 @@
-Software system becomes more important each passing day and the effort to produce good and successful software projects increases at the same pace. In an ideal world a project  should be delivered on time, inside the budget and with high quality. We know by experience that is very  difficult to balance these elements, and they are mostly likely to be indirectly proportional. Quality is very important though, and many approaches have been proposed to ensure software quality. However there is always a tradeoff between quality and and resources. For example, developers often take shortcuts to meet release deadlines, fix last minute bugs, etc.
+\peter{Don't start with vague sentences, this is your chance to entice readers to keep reading, you only get one chance, so tell us exactly why your paper is amazing in the first sentence}
+Software system becomes more important each passing day and the effort to produce good and successful software projects increases at the same pace. In an ideal world a project  should be delivered on time, inside the budget and with high quality. We know by experience that is very  difficult to balance these elements, and they are mostly likely to be indirectly proportional. Quality is very important though, and many approaches have been proposed to ensure software quality. However there is always a tradeoff between quality and and resources. For example, \peter{Not every bug can be fixed before a software product is releases. We study the impact of these known bugs, which we call defect debt. These bugs are left unfixed because of ... <time constraints and resource constraints> For example, imagine ... (examples are always good in intros)}developers often take shortcuts to meet release deadlines, fix last minute bugs, etc. \peter{You need to give me a very clear definition of what you consider to be defect debt and how it differs from a normal bug, otherwise I'll be annoyed until you tell me}
 
-A new area that studies this phenomena is Technical Debt. The term technical debt is used to express faults and non-optimal solutions that are taken conscientiously in a software project in order to achieve short term goals. Usually  this decisions allows the project to move faster towards its goal but there will be an increased cost to maintain this software in the long run. Prior work \cite{Lim2012Software} showed that technical debt is unavoidable and that there is different types of technical debt, like design debt, test debt, documentation debt, defect debt, etc.  
+A new area that studies this phenomena is Technical Debt. The term technical debt is used to express faults and non-optimal solutions that are taken conscientiously in a software project in order to achieve short term goals. Usually  this decisions allows the project to move faster towards its goal but there will be an increased cost to maintain this software in the long run. Prior work \cite{Lim2012Software} showed that technical debt is unavoidable and that there is different types of technical debt, like design debt, test debt, documentation debt, defect debt, etc. \peter{don't use etc it looks lazy. You can use such as <list> } 
 
-The technical debt metaphor is widely used in industry and the research in this area is expanding as well. However, in topics like defect debt, different works has a divergent opinion. Some studies says that defect technical debt does not exists \cite{Kruchten2013GSOFT} as in the other hand, there are studies supporting the existence of defect technical debt \cite{Seaman201125}. We argue that there are different kinds of defects in a project, and that some of them can be characterized as defect technical debt, although not all of defects are necessarily  a defect technical debt. 
+The technical debt metaphor is widely used in industry and the research in this area is expanding as well. However, in topics like defect debt, different works has a divergent opinion. \peter{? This doesn't make sense, I think everyone would say that every system has at least one bug that wasn't fixed in a release?}Some studies says that defect technical debt does not exists \cite{Kruchten2013GSOFT} as in the other hand, there are studies supporting the existence of defect technical debt \cite{Seaman201125}. \peter{It would be better if you gave conflicting definitions instead of vague statements} We argue that there are different kinds of defects in a project, and that some of them can be characterized as defect technical debt, although not all of defects are necessarily  a defect technical debt. 
 
 Our goal is to understand, characterize and model Defect Debt, being able to distinguish Defect Debt from other Bugs.
 
-In this paper, we extract more than 139,000 commits and analyze more than 67,000 bug reports from one large open source software. We performe a empiracal study on Google Chrome to answer our research questions. 
+In this paper, we extract more than 139,000 commits and analyze more than 67,000 bug reports from one large open source software. We perform a empirical study on Google Chrome to answer our research questions. 
 
-Fisrt, we analyze 25 releases from Chrome grouping the number of reported bugs and fixed bugs for each one of them. Based on the result of this analysis we found a pattern that can categorize Defect Debt and Bugs. We found that Bugs are more urgent defects, that are fixed in the same release as reported or in the immediatly next one. However, Defect debt lingers in the system for a long time, but eventually get fixed. In the analyzed project the avarage percentage of Bugs are of 69.55\% and Defect Debt is of 30.44\%.
+First, we analyze 25 releases from Chrome grouping the number of reported bugs and fixed bugs for each one of them. \peter{Just write the whole thing in the present tense, it'll make your life easier} Based on the result of this analysis we found a pattern that can categorize Defect Debt and Bugs. We found that Bugs are more urgent defects, \peter{Isn't this definitional? If it is that you didn't find this, but you can still find that a certain percentage are defect debt vs defects} that are fixed in the same release as reported or in the immediately next one. However, Defect debt lingers in the system for a long time, but eventually get fixed. In the analyzed project the average percentage of Bugs are of 69.55\% and Defect Debt is of 30.44\%.
 
-Second, we analyze the total number of open bugs in the system and the number of Defect Debt. Then we classify the commits accordingly with their intention. We use this information in to undertand how Defect Debt impacts the addition of new features. Based on our result we find that there is no direct negative relation between the number of Defect Debt and the addition of new features. 
+Second, we analyze the total number of open bugs in the system and the number of Defect Debt. Then we classify the commits accordingly with their intention. We use this information in to understand how Defect Debt impacts the addition of new features.\peter{how is this measured?} Based on our result we find that there is no direct negative relation between the number of Defect Debt and the addition of new features. 
 
-Third, we collect several metrics and propose a model to Defect Debt, we find that it is possible to build such a model, but it is necessary to treat the data in a more granular level (i.e., file level). 
+Third, we collect several metrics and propose a model to Defect Debt,\sout{we find that it is possible to build such a model, but it is necessary to treat the data in a more granular level (i.e., file level).} 
 
-The rest of the paper is organized as follows: Section~\ref{sec:related_work} presents the related work, followed by Section~\ref{sec:approach} that details our approach. We present our case study results in Section~\ref{sec:results}. The threats to validity of our work are discussed in Section~\ref{sec:threats_to_validity}. Section~\ref{sec:conclusion} lists the ours conclusions and future work. 
+The rest of the paper is organized as follows: Section~\ref{sec:related_work} presents the related work, followed by Section~\ref{sec:approach} that details our approach. We present our case study results in Section~\ref{sec:results}. The threats to validity of our work are discussed in Section~\ref{sec:threats_to_validity}. Section~\ref{sec:conclusion} lists the ours conclusions and future work. \peter{I'm just going to make content comments for grading. We can discuss changes that are necessary to turn this into a conference paper later.}
