--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@ Montreal, Canada\\
 During the development and maintenance of a software system, developers face unpredictable difficulties or pressures, and in many cases are forced to apply unconventional solutions to overcome these difficulties. For example, they might adopt insufficiently tested or temporary solutions (i.e., workarounds and hacks), neglect good design practices, and introduce inaccurate or incomplete documentation
 due to time constraints and pressure to meet deadlines. This phenomenon has been explained through the metaphor of Technical Debt.\peter{Apply throughout, lower case: "technical debt"}
 
-Technical Debt is a broad definition and there are many kinds of Debts. (e.g., Design Debt, Documentation Debt, Defect Debt, etc.). Although these different kinds of Technical Debt are widely accept there is a not a clear definition for some of them.Sometimes the definition of these Debts cannot be clearly distinguished from well-know terms in Software Engineering (i.e., Defect Debt and Bugs). 
+Technical Debt is a broad definition and there are many kinds of Debts. \peter{Not in abstract. Just talk about the types of debt you will cover, this is background} (e.g., Design Debt, Documentation Debt, Defect Debt, etc.). Although these different kinds of Technical Debt are widely accept there is a not a clear definition for some of them.Sometimes the definition of these Debts cannot be clearly distinguished from well-know terms in Software Engineering (i.e., Defect Debt and Bugs). 
 
 Our goal is to characterize Defect Debt and be able to make a clear definition that will allow us to distinguish between Defect Debt and Bugs. We perform a case study on one large open source project mining its source code and issue tracker repositories extracting the necessary attributes to define what is Defect Debt and how it impacts the addition of new features. We find that Bugs are more critical defects and are fixed near to its reported date, whereas Defect Debt tends to linger in the system for several releases, in Chrome we have a percentage of 69.55\%  Bugs and 30.44\% Defect Debt. We also find that there is no direct impact in the number of feature addition caused by Defect Debt.
   
